some test repair